# ChangeLog for media-video/pitivi
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/pitivi/ChangeLog,v 1.27 2012/02/05 01:50:23 floppym Exp $

  05 Feb 2012; Mike Gilbert <floppym@gentoo.org> pitivi-0.13.5.ebuild,
  pitivi-0.14.0.ebuild, pitivi-0.14.1.ebuild:
  Inherit multilib.

*pitivi-0.14.1 (24 Jul 2011)

  24 Jul 2011; Gilles Dartiguelongue <eva@gentoo.org> +pitivi-0.14.1.ebuild:
  Version bump.

  10 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> pitivi-0.14.0.ebuild:
  Fix bug 370677 by adding pyxdg dep, reorder deps with COMMON_DEPEND

*pitivi-0.14.0 (06 Jun 2011)

  06 Jun 2011; Nirbheek Chauhan <nirbheek@gentoo.org> +pitivi-0.14.0.ebuild:
  Bump to 0.14.0, new feature: effects

  03 Feb 2011; Gilles Dartiguelongue <eva@gentoo.org> -pitivi-0.11.3.ebuild,
  -pitivi-0.13.1.ebuild, -pitivi-0.13.3.ebuild, pitivi-0.13.5.ebuild:
  Enable support for multiple python slots installations. Use slot dependency
  for pygtk. Clean up old revisions.

*pitivi-0.13.5 (31 Jan 2011)

  31 Jan 2011; Arun Raghavan <ford_prefect@gentoo.org> +pitivi-0.13.5.ebuild,
  +files/pitivi-0.13.5-work-with-old-good.patch:
  Bump to 0.13.5. Lots of enhancements and bug fixes.

*pitivi-0.13.4 (20 Mar 2010)

  20 Mar 2010; Nirbheek Chauhan <nirbheek@gentoo.org> +pitivi-0.13.4.ebuild:
  Bump to 0.13.4, enable tests

  04 Oct 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
  pitivi-0.11.3.ebuild, pitivi-0.13.1.ebuild, pitivi-0.13.3.ebuild:
  net-zope/zopeinterface renamed to net-zope/zope-interface.

*pitivi-0.13.3 (28 Sep 2009)

  28 Sep 2009; Hanno Boeck <hanno@gentoo.org> +pitivi-0.13.3.ebuild:
  Version bump, disabled tests as they require x11.

  27 Jun 2009; Hanno Boeck <hanno@gentoo.org> pitivi-0.13.1.ebuild:
  Add librsvg dependency, fix #275344.

*pitivi-0.13.1 (31 May 2009)

  31 May 2009; Gilles Dartiguelongue <eva@gentoo.org> +pitivi-0.13.1.ebuild:
  Bump to 0.13.1.
