@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-<herd>gstreamer</herd>
-<maintainer><email>hanno@gentoo.org</email></maintainer>
+	<herd>gnome</herd>
+	<herd>gstreamer</herd>
+	<maintainer>
+		<email>nirbheek@gentoo.org</email>
+		<name>Nirbheek Chauhan</name>
+	</maintainer>
 </pkgmetadata>
