@@ -1,6 +1,9 @@
 # ChangeLog for media-video/pitivi
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/pitivi/ChangeLog,v 1.27 2012/02/05 01:50:23 floppym Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/pitivi/ChangeLog,v 1.28 2012/09/25 02:45:47 nirbheek Exp $
+
+  25 Sep 2012; Nirbheek Chauhan <nirbheek@gentoo.org> metadata.xml:
+  Update metadata.xml; add myself to maintainer, add gnome team, remove hanno
 
   05 Feb 2012; Mike Gilbert <floppym@gentoo.org> pitivi-0.13.5.ebuild,
   pitivi-0.14.0.ebuild, pitivi-0.14.1.ebuild:
@@ -122,4 +125,3 @@
   13 May 2006; Hanno Boeck <hanno@gentoo.org> +metadata.xml,
   +pitivi-0.10.0.ebuild:
   Initial commit.
-
